allow admins to delete prompt categories
Closes #40
